src/objects/License_without_Fees__mdt.object
<CustomObject>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Code__c</fullName>
        <label>Prof Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>License without Fees</label>
    <pluralLabel>License without Fees</pluralLabel>
</CustomObject>